テストクラス作成

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -187,7 +187,106 @@ CommunicationCategory = コミュニケーションカテゴリー
 ProcessCategory = 処理カテゴリー
 CommunicationStatus = ステータス
 
+vKjbMaster = 企事部マスタ
+momCustId = MoM企事部ID
+companyId = MoM企業ID
+officeId = MoM事業所ID
+departmentDiv = 企事部設定区分
+customerName = 顧客名
+companyName = 企業名
+officeName = 事業所名
+departmentName = 部門名
+postNumber = 郵便番号
+address = 住所
+phoneNumber = 電話番号
+faxNumber = FAX番号
 estimation = 見積
+dealerName = 販売店名
+orgPhoneNumber = 会社代表電話番号
+picName = 担当者名
+picDeptName = 担当者部署名
+picPhoneNumber = 担当者電話番号
+picFaxNumber = 担当者FAX番号
+dealerFlowOrder = 販売店商流順
+productGrpMasterId = 商品グループマスタID
+lifecycleStatus = ライフサイクル状態
+workflowStatus = ワークフロー状態
+immutableContIdentNumber = 恒久契約識別番号
+caseNumber =
+caseTitle = 案件名
+estimationNumber = 見積番号
+estimationBranchNumber = 見積番号枝番
+estimationTitle = 見積件名
+estimationType = 見積種別
+estimatedSystemDiv = 見積作成元システム区分
+originContractNumber = 変更元契約番号
+originContractBranchNumber = 変更元契約番号枝番
+originContractId = 変更元契約ID
+commercialFlowDiv = 商流区分
+issueFormat = 発行書式
+issueEstimationTitle = 帳票用見積件名
+issueCustomerCorpName = 帳票用顧客企業名
+estimationLimit = 見積有効期限
+coverCompanyName = 見積鑑用企業名
+coverTitle = 見積鑑用敬称
+coverEstimationSubject = 見積鑑用見積件名
+coverPaymentTerms = 見積鑑用支払条件
+coverDeliveryDate = 見積鑑用納期
+coverExpirationDate = 見積鑑用有効期限
+coverRemarks = 見積鑑用備考
+coverPresentationDate = 見積鑑用見積提示日
+publishCompany = 見積発行元会社名
+publishDepartment = 見積発行元所属
+publishPostNumber = 見積発行元郵便番号
+publishAddress = 見積発行元住所
+publishTel = 見積発行元電話番号
+publishFax = 見積発行元FAX番号
+publishEmployee = 見積発行元担当者名
+spPriceApplyReason = 特価希望理由
+spPriceApplyReasonText = 特価希望理由テキスト
+mainCompetitorName = 主競合先名称
+competitionInfo = 競合情報
+competitionContractDiv = 競合先契約種別
+competitionAmount = 競合先基本料金
+extendsParameter = 拡張項目
+estimationApprovalRoute = 見積承認ルート
+operationLogList = 見積操作履歴
+estimationAttachedFileList = 見積添付ファイル
+estimationPicSaEmp = 見積担当SA社員
+estimationAddedEditorEmpList = 見積追加編集者社員
+dealerEstimationList = 販売店（見積用）
+customerEstimation = 顧客（見積用）
+estimationCheckResultList = 見積チェック結果
+estimationDetailList = 見積明細
+productEstimationList = 商品（見積用）
+mvEmployeeMaster = RJ社員情報マスタ
+momOrgId = 所属組織MoM組織ID
+orgHierarchyLevel = 所属組織階層レベル
+orgName = 所属組織名
+alesCompanyName = 販売会社名
+employeeName = 社員名
+salesDepartmentName = 部署名
+mailAddress = メールアドレス
+approvalProcessCategory = 承認処理カテゴリー
+actualEmpId = 処理実施者MoM社員ID
+actualUserName = 処理実施者社員名
+actualOrgName = 処理実施者組織名
+requestComment = コメント
+processedAt = 実施日時
+approvalRequesterEmpId = 承認依頼者MoM社員ID
+approvalRequesterName = 承認依頼者氏名
+approvalRequesterOrgName = 承認依頼者組織名
+specialPriceApprovalFlg = 特価承認対象フラグ
+estimationApprovalResultList = 見積承認実績
+estimationApprovalRouteNodeList = 見積承認ルートノード
+approvalOrder = 承認順
+approverOrgLevel = 承認者組織階層レベル
+approverEmpId = 承認者MoM社員ID
+approverName = 承認者氏名
+approverOrgName = 承認者組織名
+subApproverEmpId = 代理承認者MoM社員ID
+subApproverName = 代理承認者氏名
+subApproverOrgName = 代理承認者組織名
 fileKind = ファイル種類
 attachedFilePath = 添付ファイルパス
 attachedComment = コメント
@@ -195,4 +294,132 @@ attachedEmpId = 添付者MoM社員ID
 attachedEmpName = 添付者氏名
 attachedOrgName = 添付者組織名
 attachedAt = 添付日時
+targetLifecycleStatus = 対象ライフサイクル状態
+checkMatterCode = チェック事項コード
+checkMatterText = チェック事項文面
+displayOrder = 表示順
+checkedUserId = チェック実施者
+checkedUserName = チェック実施者氏名
+checkedOrgName = チェック実施者組織名
+checkedAt = チェック実施者日時
+state = 状態
+quantity = 数量
+amountSummary = 見積金額
+detailAbstract = 摘要
+salesCompanyName = 販売会社名
+itemMasterId = 品種マスタID
+productMasterId = 商品マスタ
+itemEstimationName = 品種名
+ricohItemCode = リコー品種コード
+itemType = 品種区分
+costType = 費用種別
+partitionPrice = 仕切価格
+effectiveFrom = 積上げ可能期間（開始日）
+effectiveTo = 積上げ可能期間（終了日）
+estimationDetail = 見積明細
+operation = 操作内容
+operatorEmpId = 操作者MoM社員ID
+operatorName = 操作者氏名
+operatorOrgName = 操作者組織名
+operatedAt = 実施日時
+productMasterId = 商品マスタID
+productEstimationName = 商品名
+repItemMasterId = 代表品種マスタID
+serviceIdentNumber = サービス識別番号
+arrangementWork = 手配業務
+contractId = 契約ID
+disengagementFlg = 解約フラグ
+arrangementWorkList = 手配業務
+arrangementWorkApprovalRoute = 手配業務承認ルート
+approvalProcessCategory = 承認処理カテゴリ
+actualUserName = 処理実施者氏名
+arrangementWorkApprovalResultList = 手配業務承認実績
+arrangementWorkApprovalRouteNodeList = 手配業務承認ルートノード
+checkedUserId = チェック実施者MoM社員ID
+checkedAt = チェック実施日時
+arrangement = 手配
+arrangementWorkTypeMasterId = 手配業務タイプマスタID
+memo = メモ
+arrangementPicWorkerEmp = 担当作業者社員
+arrangementWorkOperationLogList = 手配業務操作履歴
+workAttachedFileList = 手配業務添付ファイル
+arrangementWorkCheckResultList = 手配業務チェック結果
+contractApprovalRoute = 契約承認ルート
+contract = 契約
+contractApprovalResultList = 契約承認実績
+contractApprovalRouteNodeList = 契約承認ルートノード
+contrac = 契約
+detailAbstrac = 摘要
+itemContrac = 品種(契約用)
+contractType = 契約種別
+caseNumber = 案件番号
+contractNumber = 契約番号
+contractBranchNumber = 契約番号枝番
+contractTitle = 契約件名
+introductionPreferredDate = 導入希望日
+changePreferredDate = 変更希望日
+contractDate = 契約日
+accountSalesFlg = 売上計上フラグ
+billingDate = 請求開始日
+serviceTermStart = サービス開始日
+serviceTermEnd = サービス終了日
+cancelScheduledDate = 解約予定日
+estimationId = 見積ID
+issueEstimationTitle = 得意先コード
+issueCustomerCorpName = 得意先宛先名
+paymentTerms = 支払条件
+paymentMethod = 支払方法
+contractDetailList = 契約明細
+contractCheckResultList = 契約チェック結果
+contractApprovalRouteList = 契約承認ルート
+contractAttachedFileList = 契約添付ファイル
+contractPicSaEmp = 契約担当SA社員
+contractAddedEditorEmpList = 契約追加編集者社員
+dealerContractList = 販売店(契約用)
+customerContract = 顧客(契約用)
+contractOperationLogList = 契約操作履歴
+productContractList = 商品(契約用)
+companyNameKana = 企業名（カナ）
+phoneNumber = 会社代表電話番号
+faxNumber = 会社代表FAX番号
+companyRepresentativeName = 企業代表者名
+companyRepresentativeNameKana = MoM非連携_企業代表者名（カナ）
+picName = MoM非連携_担当者氏名
+picNameKana = MoM非連携_担当者氏名（カナ）
+picDeptName = MoM非連携_担当者部署
+picPhoneNumber = MoM非連携_担当者電話番号
+picFaxNumber = MoM非連携_担当者FAX番号
+picMailAddress = MoM非連携_担当者メールアドレス
+vKjbMaster = MoM企事部
+itemContractName = 品種名
+effectiveFrom = 積上げ可能期間(開始日)
+effectiveTo = 積上げ可能期間(終了日)
+contractDetail = 契約明細
+productContractName = 商品名
+serviceCategory = サービスカテゴリ
+processCategory = 処理カテゴリー
+targetDocKey = 対象文書キー
+workflowType = ワークフロー種別
+approvalTargetType = 承認対象種別
+targetDocUrl = 対象文書画面URL
+requestOriginId = 依頼者
+requestFromId = 伝達者
+requestToId = 被伝達者
+requestToCandidateId = 被伝達者候補
+targetDocNumber = 対象文書番号
+targetDocBranchNumber = 対象文書番号枝番
+productName = 商品名
+title = 件名
+communicationComment = コメント
+communicatedAt = 伝達日時
+parent = 親問い合わせ
+children = 子問い合わせリスト
+contactFromEmpId = 送信者MoM社員ID
+title = タイトル
+sendAt = 送信日時
+contactToList = 宛先
+contac = 問い合わせ
+sendType = 送信タイプ
+contactToEmpId = 宛先MoM社員ID
+contactToEmail = 宛先メールアドレス
 
