企事部マスタ・RJ社員マスタとのリレーションを外す

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -188,6 +188,8 @@ ProcessCategory = 処理カテゴリー
 CommunicationStatus = ステータス
 
 vKjbMaster = 企事部マスタ
+momEmployeeId = MoM社員ID
+momKjbSystemId = MoM企事部システム連携ID
 momCustId = MoM企事部ID
 companyId = MoM企業ID
 officeId = MoM事業所ID
