メッセージプロパティ修正

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -367,8 +367,8 @@ serviceTermStart = サービス開始日
 serviceTermEnd = サービス終了日
 cancelScheduledDate = 解約予定日
 estimationId = 見積ID
-issueEstimationTitle = 得意先コード
-issueCustomerCorpName = 得意先宛先名
+billingCustomerSpCode = 得意先コード
+billingCustomerSpName = 得意先宛先名
 paymentTerms = 支払条件
 paymentMethod = 支払方法
 contractDetailList = 契約明細
