--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -410,10 +410,11 @@ requestToId = 被伝達者
 requestToCandidateId = 被伝達者候補
 targetDocNumber = 対象文書番号
 targetDocBranchNumber = 対象文書番号枝番
-productName = 商品名
+productGrpName = 商品グループ名
 title = 件名
 communicationComment = コメント
 communicatedAt = 伝達日時
+productGrpMasterId = 商品グループマスタID
 parent = 親問い合わせ
 children = 子問い合わせリスト
 contactFromEmpId = 送信者MoM社員ID
