カラム名修正・解約理由追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -310,7 +310,8 @@ checkedOrgName = チェック実施者組織名
 checkedAt = チェック実施者日時
 state = 状態
 quantity = 数量
-amountSummary = 見積金額
+amountSummary = 金額
+estimationAmountSummary = 見積金額
 detailAbstract = 摘要
 salesCompanyName = 販売会社名
 itemMasterId = 品種マスタID
@@ -320,8 +321,6 @@ ricohItemCode = リコー品種コード
 itemType = 品種区分
 costType = 費用種別
 partitionPrice = 仕切価格
-effectiveFrom = 積上げ可能期間（開始日）
-effectiveTo = 積上げ可能期間（終了日）
 estimationDetail = 見積明細
 operation = 操作内容
 operatorEmpId = 操作者MoM社員ID
@@ -371,6 +370,8 @@ serviceTermStart = サービス開始日
 serviceTermEnd = サービス終了日
 cancelScheduledDate = 解約予定日
 estimationId = 見積ID
+cancelReason = 解約理由
+cancelReasonEtc = その他解約理由
 billingCustomerSpCode = 得意先コード
 billingCustomerSpName = 得意先宛先名
 paymentTerms = 支払条件
@@ -398,8 +399,6 @@ picFaxNumber = MoM非連携_担当者FAX番号
 picMailAddress = MoM非連携_担当者メールアドレス
 vKjbMaster = MoM企事部
 itemContractName = 品種名
-effectiveFrom = 積上げ可能期間(開始日)
-effectiveTo = 積上げ可能期間(終了日)
 contractDetail = 契約明細
 productContractName = 商品名
 serviceCategory = サービスカテゴリ
