--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -58,6 +58,9 @@ EntityCheckNumberMaxError.MSG = {0}は最大値（{1}）を超えています。
 MasterDoesNotExist.ID = ROT00016
 MasterDoesNotExist.TYPE = Error
 MasterDoesNotExist.MSG = {0}にデータが存在しません。
+SearchParameterError.ID = ROT00017
+SearchParameterError.TYPE = Error
+SearchParameterError.MSG = {0}には{1}を設定してください。
 
 #エラーID(共通:ファイル系)
 FileNotFoundError.ID = ROT00100
