コミュニケーションエンティティに氏名4つ追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -423,6 +423,10 @@ requestToCandidateId = 被伝達者候補
 targetDocNumber = 対象文書番号
 targetDocBranchNumber = 対象文書番号枝番
 productGrpName = 商品グループ名
+requestOriginName = 依頼者氏名
+requestFromName = 伝達者氏名
+requestToName = 被伝達者氏名
+requestToCandidateName = 被伝達者候補指名
 title = 件名
 communicationComment = コメント
 communicatedAt = 伝達日時
