メール送信エラー追加対応

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -61,7 +61,7 @@ MasterDoesNotExist.MSG = {0}にデータが存在しません。
 SearchParameterError.ID = ROT00017
 SearchParameterError.TYPE = Error
 SearchParameterError.MSG = {0}には{1}を設定してください。
-MailSendError = ROT00018
+MailSendError.ID = ROT00018
 MailSendError.TYPE = Error
 MailSendError.MSG = メール送信に失敗しました。
 
