バグの修正とエラーメッセージ追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -64,6 +64,9 @@ SearchParameterError.MSG = {0}には{1}を設定してください。
 MailSendError.ID = ROT00018
 MailSendError.TYPE = Error
 MailSendError.MSG = メール送信に失敗しました。
+CpqApiCallError.ID = ROT00019
+CpqApiCallError.TYPE = Error
+CpqApiCallError.MSG = CPQとの連携に失敗しました。
 
 #エラーID(共通:ファイル系)
 FileNotFoundError.ID = ROT00100
