201812追加対応 追加修正

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -786,6 +786,7 @@ distributorMomSoshikiId = MoM組織ID
 distributorMomDepoCd = MoMデポコード
 cancelOrderNo = 解約注文番号
 orbSendSiteId = MoM設置届先サイトID
+serviceOrgName = 課所名
 holdingFlg = 保留フラグ
 contactFromEmpName = 送信者氏名
 contactToEmpName = 宛先氏名
