認可処理のメッセージを追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -8,6 +8,18 @@ AccessLogStartInfo.MSG = Access method:{0} uri:{1} state:start accessor:{2} ,{3}
 AccessLogEndInfo.ID = IOT00003
 AccessLogEndInfo.TYPE = Info
 AccessLogEndInfo.MSG = Access method:{0} uri:{1} state:{2} accessor:{3} ,{4} status: {5}
+AuthorizeFindParamInfo.ID = IOT00004
+AuthorizeFindParamInfo.TYPE = Info
+AuthorizeFindParamInfo.MSG = 「パラメーター種別： {0}」で認可対象のデータを特定します。
+AuthorizeCreateParamToJudgeInfo.ID = IOT00005
+AuthorizeCreateParamToJudgeInfo.TYPE = Info
+AuthorizeCreateParamToJudgeInfo.MSG = 「参照種別： {0}」で権限判定用パラメーターを作成します。
+AuthorizeSetJudgeParamInfo.ID = IOT00006
+AuthorizeSetJudgeParamInfo.TYPE = Info
+AuthorizeSetJudgeParamInfo.MSG = 権限判定用パラメーターに{0}を設定します。「{1}： {2}」
+AuthorizeProcessJudgeStartInfo.ID = IOT00007
+AuthorizeProcessJudgeStartInfo.TYPE = Info
+AuthorizeProcessJudgeStartInfo.MSG = 「参照種別： {0}」 「権限レベル: {1}」 で認可判定を実施します。
 
 #エラーID(共通)
 ParameterEmptyError.ID = ROT00001
@@ -67,6 +79,18 @@ MailSendError.MSG = メール送信に失敗しました。
 CpqApiCallError.ID = ROT00019
 CpqApiCallError.TYPE = Error
 CpqApiCallError.MSG = CPQとの連携に失敗しました。
+MalformedUrlError.ID = ROT00020
+MalformedUrlError.TYPE = Error
+MalformedUrlError.MSG = 不正なURLです。
+NotFoundApiError.ID = ROT00021
+NotFoundApiError.TYPE = Error
+NotFoundApiError.MSG = 該当するAPIが存在しません。
+FailCreateParamToJudgeError.ID = ROT00022
+FailCreateParamToJudgeError.TYPE = Error
+FailCreateParamToJudgeError.MSG = 権限判定用パラメーターの作成に失敗しました。
+FailAuthorizeProcessError.ID = ROT00023
+FailAuthorizeProcessError.TYPE = Error
+FailAuthorizeProcessError.MSG = 認可判定処理に失敗しました。
 
 #エラーID(共通:ファイル系)
 FileNotFoundError.ID = ROT00100
