#2539 契約・手配用の問い合わせ時エラーメッセージを追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -94,6 +94,9 @@ FailAuthorizeProcessError.MSG = 認可判定処理に失敗しました。
 DuplicateDataError.ID = ROT00024
 DuplicateDataError.TYPE = Error
 DuplicateDataError.MSG = {0}が重複するため、{1}を行えません。
+NotExistsToProcessError.ID = ROT00025
+NotExistsToProcessError.TYPE = Error
+NotExistsToProcessError.MSG = {0}に{1}が設定されていないため、{2}は行えません。
 
 #エラーID(共通:ファイル系)
 FileNotFoundError.ID = ROT00100
