承認時のエラーメッセージを追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -97,6 +97,9 @@ DuplicateDataError.MSG = {0}が重複するため、{1}を行えません。
 NotExistsToProcessError.ID = ROT00025
 NotExistsToProcessError.TYPE = Error
 NotExistsToProcessError.MSG = {0}に{1}が設定されていないため、{2}は行えません。
+LowOrderApproverNotApprovalError.ID = ROT00026
+LowOrderApproverNotApprovalError.TYPE = Error
+LowOrderApproverNotApprovalError.MSG = 下位承認者が未承認のため、承認は行えません。
 
 #エラーID(共通:ファイル系)
 FileNotFoundError.ID = ROT00100
