問い合わせ情報登録時エラーメッセージ追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -829,3 +829,6 @@ serviceOrgName = 課所名
 holdingFlg = 保留フラグ
 contactFromEmpName = 送信者氏名
 contactToEmpName = 宛先氏名
+targetDirectionType = 宛先種別
+contactTitle = 問い合わせタイトル
+contactMessage = 問い合わせ内容
