見積明細DTOのテスト追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -456,6 +456,7 @@ salesCompanyName = 販売会社名
 itemMasterId = 品種マスタID
 productMasterId = 商品マスタ
 itemEstimationName = 品種名
+itemEstimation = 品種（見積用）
 ricohItemCode = リコー品種コード
 itemType = 品種区分
 costType = 費用種別
