--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -839,3 +839,8 @@ contactToEmpName = 宛先氏名
 targetDirectionType = 宛先種別
 contactTitle = 問い合わせタイトル
 contactMessage = 問い合わせ内容
+createdUser = 登録者
+estimationDetailRegisterParameterList = 見積明細
+productGroupMasterId = 商品グループマスタID
+status = ステータス
+reEstimationId = 再見積ID
