契約DTOテスト完了

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -844,3 +844,16 @@ estimationDetailRegisterParameterList = 見積明細
 productGroupMasterId = 商品グループマスタID
 status = ステータス
 reEstimationId = 再見積ID
+checkResultId = チェック結果ID
+netricohAccount = NetRicoh会員ID
+setupCorpNm = 設置先名
+setupPostCd = 設置先郵便番号
+setupAddr = 設置先住所
+setupTel = 設置先電話番号
+bpCd = 仕入取引先コード
+rCost = Ｒ原価
+rjPurchasePrice = ＲＪ仕入価格
+rjDividingPrice = ＲＪ仕切価格
+motherStorePrice = 母店売価(接点店仕切)
+taxFlag = 消費税区分
+webOrderNumber = web受注注文番号
