--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -356,7 +356,6 @@ productGrpMasterId = 商品グループマスタID
 lifecycleStatus = ライフサイクル状態
 workflowStatus = ワークフロー状態
 immutableContIdentNumber = 恒久契約識別番号
-caseNumber =
 caseTitle = 案件名
 estimationNumber = 見積番号
 estimationBranchNumber = 見積番号枝番
@@ -511,6 +510,7 @@ cancelScheduledDate = 解約予定日
 estimationId = 見積ID
 cancelReason = 解約理由
 cancelReasonEtc = その他解約理由
+webOrderNumber = web受注注文番号
 billingCustomerSpCode = 得意先コード
 billingCustomerSpName = 得意先宛先名
 paymentTerms = 支払条件
@@ -536,6 +536,11 @@ picDeptName = MoM非連携_担当者部署
 picPhoneNumber = MoM非連携_担当者電話番号
 picFaxNumber = MoM非連携_担当者FAX番号
 picMailAddress = MoM非連携_担当者メールアドレス
+netricohAccount = NetRicoh会員ID
+setupCorpNm = 設置先名
+setupPostCd = 設置先郵便番号
+setupAddr = 設置先住所
+setupTel = 設置先電話番号
 vKjbMaster = MoM企事部
 itemContractName = 品種名
 contractDetail = 契約明細
