アノテーション及びテスト追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -459,6 +459,12 @@ ricohItemCode = リコー品種コード
 itemType = 品種区分
 costType = 費用種別
 partitionPrice = 仕切価格
+bpCd = 仕入取引先コード
+rCost = Ｒ原価
+rjPurchasePrice = ＲＪ仕入価格
+rjDividingPrice = ＲＪ仕切価格
+motherStorePrice = 母店売価(接点店仕切)
+taxFlag = 消費税区分
 estimationDetail = 見積明細
 operation = 操作内容
 operatorEmpId = 操作者MoM社員ID
@@ -474,6 +480,7 @@ contractId = 契約ID
 disengagementFlg = 解約フラグ
 arrangementWorkList = 手配業務
 arrangementWorkApprovalRoute = 手配業務承認ルート
+contractApprovalRouteNodeId = 契約承認ルートノードID
 approvalProcessCategory = 承認処理カテゴリ
 actualUserName = 処理実施者氏名
 arrangementWorkApprovalResultList = 手配業務承認実績
@@ -542,6 +549,7 @@ setupPostCd = 設置先郵便番号
 setupAddr = 設置先住所
 setupTel = 設置先電話番号
 vKjbMaster = MoM企事部
+itemContract = (契約用)
 itemContractName = 品種名
 contractDetail = 契約明細
 productContractName = 商品名
