--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -550,7 +550,7 @@ setupPostCd = 設置先郵便番号
 setupAddr = 設置先住所
 setupTel = 設置先電話番号
 vKjbMaster = MoM企事部
-itemContract = (契約用)
+itemContract = 品種(契約用)
 itemContractName = 品種名
 contractDetail = 契約明細
 productContractName = 商品名
@@ -858,3 +858,6 @@ productGroupMasterId = 商品グループマスタID
 status = ステータス
 reEstimationId = 再見積ID
 checkResultId = チェック結果ID
+communication = コミュニケーションエンティティ
+mailSubjectRepalceValueList = メール件名置換リスト
+mailTextRepalceValueList = メール本文置換リスト
