Excel帳票出力機能追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -141,6 +141,9 @@ FileReadError.MSG = 指定されたファイルの読み込みに失敗しまし
 FileWriteError.ID = ROT00112
 FileWriteError.TYPE = Error
 FileWriteError.MSG = ファイルの出力に失敗しました。
+FileMappingFailed.ID = ROT00113
+FileMappingFailed.TYPE = Error
+FileMappingFailed.MSG = {0}のマッピングに失敗しました。
 
 #エラーID(見積)
 EntityDoesNotExistEstimation.ID = RES00001
