--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -451,6 +451,7 @@ checkedOrgName = チェック実施者組織名
 checkedAt = チェック実施者日時
 state = 状態
 unitPrice = 単価
+estimationUnitPrice = 見積単価
 quantity = 数量
 amountSummary = 金額
 estimationAmountSummary = 見積金額
