#2807 MoM権限によるレスポンスのフィルタリング処理の検証

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -106,6 +106,12 @@ EntityCheckNumberMinError.MSG = {0}は最小値（{1}）を下回っています
 EntityCheckNumberDigitsError.ID = ROT00028
 EntityCheckNumberDigitsError.TYPE = Error
 EntityCheckNumberDigitsError.MSG = {0}は小数点以下{1}桁を超えています。
+ExternalModuleError.ID = ROT00029
+ExternalModuleError.TYPE = Error
+ExternalModuleError.MSG = 外部提供モジュールでエラーが発生しました。
+NoMomAuthoritiesError.ID = ROT00030
+NoMomAuthoritiesError.TYPE = Error
+NoMomAuthoritiesError.MSG = シングルユーザーID「{0}」に紐づくMoM権限情報が存在しません。
 
 #エラーID(共通:ファイル系)
 FileNotFoundError.ID = ROT00100
