--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -106,7 +106,7 @@ EntityCheckNumberMinError.MSG = {0}は最小値（{1}）を下回っています
 EntityCheckNumberDigitsError.ID = ROT00028
 EntityCheckNumberDigitsError.TYPE = Error
 EntityCheckNumberDigitsError.MSG = {0}は小数点以下{1}桁を超えています。
-MasterDoesNotExistMvTJmci101Master.Id = ROT00029
+MasterDoesNotExistMvTJmci101Master.ID = ROT00029
 MasterDoesNotExistMvTJmci101Master.TYPE = Error
 MasterDoesNotExistMvTJmci101Master.MSG = {0}がMoM請求売上先サイト情報マスタ上に存在しません。
 
