ContractDetailカラム追加、テスト用sql追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -564,6 +564,8 @@ setupPostCd = 設置先郵便番号
 setupAddr = 設置先住所
 setupTel = 設置先電話番号
 vKjbMaster = MoM企事部
+initialAccountSalesStatus = イニシャル売上計上処理状態
+initialAccountSalesDate = イニシャル売上計上処理日
 itemContract = 品種(契約用)
 itemContractName = 品種名
 contractDetail = 契約明細
