--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -877,3 +877,4 @@ checkResultId = チェック結果ID
 communication = コミュニケーションエンティティ
 mailSubjectRepalceValueList = メール件名置換リスト
 mailTextRepalceValueList = メール本文置換リスト
+systemId = システムID
