テスト修正

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -878,3 +878,4 @@ communication = コミュニケーションエンティティ
 mailSubjectRepalceValueList = メール件名置換リスト
 mailTextRepalceValueList = メール本文置換リスト
 appId = アプリケーションID
+errorMessage = エラー内容
