手配業務エラー履歴エンティティ修正

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -879,3 +879,4 @@ mailSubjectRepalceValueList = メール件名置換リスト
 mailTextRepalceValueList = メール本文置換リスト
 appId = アプリケーションID
 errorMessage = エラー内容
+errorOccurredAt = エラー発生日時
