--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -271,8 +271,8 @@ CannotOccurErrorWork.ID = RAR00009
 CannotOccurErrorWork.TYPE = Error
 CannotOccurErrorWork.MSG = 手配業務が「受付中」「作業中」状態でないため、エラーを発生できません。
 CannotSolveErrorWork.ID = RAR00010
-CannotOccurErrorWork.TYPE = Error
-CannotOccurErrorWork.MSG = 手配業務が「エラー」状態でないため、エラーを解消できません。
+CannotSolveErrorWork.TYPE = Error
+CannotSolveErrorWork.MSG = 手配業務が「エラー」状態でないため、エラーを解消できません。
 
 #エラーID(コミュニケーション)
 EntityDoesNotExistCommunication.ID = RCM00001
