--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -269,7 +269,7 @@ SlowToCancelCompletedWork.TYPE = Error
 SlowToCancelCompletedWork.MSG = 一度でも承認済の手配業務で業務完了取消は行えません。
 CannotOccurErrorWork.ID = RAR00009
 CannotOccurErrorWork.TYPE = Error
-CannotOccurErrorWork.MSG = 手配業務が「受付中」「作業中」状態でないため、エラーを発生できません。
+CannotOccurErrorWork.MSG = 手配業務が「受付中」「作業中」状態でないため、エラーへ更新できません。
 CannotSolveErrorWork.ID = RAR00010
 CannotSolveErrorWork.TYPE = Error
 CannotSolveErrorWork.MSG = 手配業務が「エラー」状態でないため、エラーを解消できません。
