#2854 契約操作履歴操作内容、契約エラーメッセージ追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -241,6 +241,9 @@ NotFoundContractByParameter.MSG = {0}が{1}の契約が存在しません。
 DuplicationContractByParameter.ID = RCO00014
 DuplicationContractByParameter.TYPE = Error
 DuplicationContractByParameter.MSG = {0}が{1}の契約が複数存在します。
+ContractLifecycleAndWorkflowStatusError.ID = RCO00015
+ContractLifecycleAndWorkflowStatusError.TYPE = Error
+ContractLifecycleAndWorkflowStatusError.MSG = 契約のライフサイクルが{0}の時ワークフローが{1}以外で{2}は行えません。
 
 #エラーID(手配)
 EntityDoesNotExistArrangement.ID = RAR00001
