#2869 見積明細、契約明細修正と見積明細管理追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -889,3 +889,5 @@ mailTextRepalceValueList = メール本文置換リスト
 appId = アプリケーションID
 errorMessage = エラー内容
 errorOccurredAt = エラー発生日時
+beforeQuantity = 変更前数量
+managedEstimationDetailList = 見積明細管理
