--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -891,3 +891,5 @@ errorMessage = エラー内容
 errorOccurredAt = エラー発生日時
 beforeQuantity = 変更前数量
 managedEstimationDetailList = 見積明細管理
+empName = ダミー社員名
+orgName = ダミー組織名
