ファイル取込エラーメッセージ追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -336,6 +336,9 @@ CallAPIErrorBatch.MSG = {0}の{1}API実行に失敗しました。
 KIZUNAVIBatchDateParameterFormatError.ID = RBA00012
 KIZUNAVIBatchDateParameterFormatError.TYPE = Error
 KIZUNAVIBatchDateParameterFormatError.MSG = {0}のフォーマットは{1}です。
+FileImportBatchError.ID = RBA00013
+FileImportBatchError.TYPE = Error
+FileImportBatchError.MSG = {0}ファイルの取込に失敗しました。
 
 #フィールド名
 SortColumn = ソート項目
