#3037 指摘事項修正

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -894,3 +894,6 @@ errorMessage = エラー内容
 errorOccurredAt = エラー発生日時
 beforeQuantity = 変更前数量
 managedEstimationDetailList = 見積明細管理
+transToServiceOrgCode = 振替先課所コード
+transToServiceOrgName = 振替先課所名
+price = 原価
