契約Entityチェックテスト修正

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -897,3 +897,6 @@ managedEstimationDetailList = 見積明細管理
 transToServiceOrgCode = 振替先課所コード
 transToServiceOrgName = 振替先課所名
 price = 原価
+contactNo = お問い合わせ番号
+orderNo = 注文番号
+equipmentCode = 機種コード
