帳票関連DTO、エンティティ修正

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -282,6 +282,14 @@ EntityDoesNotExistCommunication.ID = RCM00001
 EntityDoesNotExistCommunication.TYPE = Error
 EntityDoesNotExistCommunication.MSG = 指定した{0}が存在しません。
 
+#エラーID(帳票)
+EntityDoesNotExistReports.ID = RRP00001
+EntityDoesNotExistReports.TYPE = Error
+EntityDoesNotExistReports.MSG = 指定した{0}が存在しません。
+TemplateDoesNotIdentify.ID = RRP00002
+TemplateDoesNotIdentify.TYPE = Error
+TemplateDoesNotIdentify.MSG = 帳票テンプレートが一意に特定できません。
+
 #情報ID(バッチ)
 BatchCreateFileStartInfo.ID = IBA00001
 BatchCreateFileStartInfo.TYPE = Info
