CSP追加項目反映第2段

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -910,3 +910,11 @@ inspectionMonth = 点検診断月指定
 inspectionMonthYearWorth = 点検診断月(12ヶ月分)
 inputPostNumber = MoM非連携_郵便番号(手入力)
 inputAddress = MoM非連携_住所(手入力)
+issueTaxCodeValue = 帳票用消費税率区分
+picNameKana = 担当者名（カナ）
+dealerNameKana = 販売店名（カナ）
+companyRepresentativeName = MoM非連携_企業代表者名
+companyRepresentativeNameKana = MoM非連携_企業代表者名(カナ)
+momCustId = MoM企事部ID
+momKjbId = MoM非連携_MoM企事部ID
+salesCompanyNameKana = 販売店名（カナ）
