--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -225,7 +225,7 @@ CannotCreateContractBasedOnUnacceptedEstimation.TYPE = Error
 CannotCreateContractBasedOnUnacceptedEstimation.MSG = 受注済みでない見積情報をもとに契約情報は作成できません。
 DoneContractPlanChangeError.ID = RCO00009
 DoneContractPlanChangeError.TYPE = Error
-DoneContractPlanChangeError.MSG = すでに作成中のプラン変更後の契約が存在するため、プラン変更は行えません。
+DoneContractPlanChangeError.MSG = すでに作成中の契約変更後の契約が存在するため、契約変更は行えません。
 MismatchContractLifecycleStatusError.ID = RCO00010
 MismatchContractLifecycleStatusError.TYPE = Error
 MismatchContractLifecycleStatusError.MSG = ライフサイクル状態が一致しません。
