--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -926,3 +926,5 @@ companyRepresentativeNameKana = MoM非連携_企業代表者名(カナ)
 momCustId = MoM企事部ID
 momKjbId = MoM非連携_MoM企事部ID
 salesCompanyNameKana = 販売店名（カナ）
+estimationWorkId = 見積ワークID
+vupLinkageFlg = V-UP連携フラグ
