#3184 見積エラーメッセージ追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -197,6 +197,9 @@ CannotLoginToCpqError.MSG = CPQへのログインに失敗しました。
 EstimationCopyCommodityBeforeError.ID = RES00012
 EstimationCopyCommodityBeforeError.TYPE = Error
 EstimationCopyCommodityBeforeError.MSG = 商材積上前に見積コピーは行えません。
+MismatchEstimationAmountError.ID = RES00013
+MismatchEstimationAmountError.TYPE = Error
+MismatchEstimationAmountError.MSG = 数量が一致しません。
 
 #エラーID(契約)
 EntityDoesNotExistContract.ID = RCO00001
