#3100 日付チェック用メソッドを追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -115,6 +115,9 @@ ExternalModuleError.MSG = 外部提供モジュールでエラーが発生しま
 NoMomAuthoritiesError.ID = ROT00031
 NoMomAuthoritiesError.TYPE = Error
 NoMomAuthoritiesError.MSG = シングルユーザーID「{0}」に紐づくMoM権限情報が存在しません。
+IllegalFormatError.ID = ROT00032
+IllegalFormatError.TYPE = Error
+IllegalFormatError.MSG = {0}のフォーマットは{1}です。
 
 #エラーID(共通:ファイル系)
 FileNotFoundError.ID = ROT00100
