#3184 見積初期費情報テストとエラーメッセージ追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -937,3 +937,14 @@ momKjbId = MoM非連携_MoM企事部ID
 salesCompanyNameKana = 販売店名（カナ）
 estimationWorkId = 見積ワークID
 vupLinkageFlg = V-UP連携フラグ
+loginMoMId = ログインMoM社員ID
+loginSingleUserid = ログインシングルユーザID
+oeProductRoot = 商流
+custInfoCpmpanyId = お客様企事部ID
+estimatedNoRts = RTS見積No
+initialProductCd = 初期費　品種コード
+initialUnitPrice = 初期費　標準価格
+initialEstimatedUnitPrice = 初期費　見積り単価
+initialAmt = 初期費　数量
+initialEstimatedPrice = 初期費　見積り金額
+hanshCd = 販社CD
