帳票関連DTO追加変更

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -298,6 +298,19 @@ EntityDoesNotExistReports.MSG = 指定した{0}が存在しません。
 TemplateDoesNotIdentify.ID = RRP00002
 TemplateDoesNotIdentify.TYPE = Error
 TemplateDoesNotIdentify.MSG = 帳票テンプレートが一意に特定できません。
+Vo3ISReportServiceError.ID = RRP00003
+Vo3ISReportServiceError.TYPE = Error
+Vo3ISReportServiceError.MSG = 帳票基盤でエラーが発生しました。{0}
+TemplateDoesNotExist.ID = RRP00004
+TemplateDoesNotExist.TYPE = Error
+TemplateDoesNotExist.MSG = 帳票テンプレートファイル{0}が存在しません。
+PageMissMatchTemplate.ID = RRP00005
+PageMissMatchTemplate.TYPE = Error
+PageMissMatchTemplate = 帳票テンプレートと出力対象のページが一致しません。
+DataMissMatchOutputPageNum.ID = RRP00006
+DataMissMatchOutputPageNum.TYPE = Error
+DataMissMatchOutputPageNum = 出力対象ページと帳票データ部マッピングリストの数が一致しません。
+
 
 #情報ID(バッチ)
 BatchCreateFileStartInfo.ID = IBA00001
@@ -948,3 +961,7 @@ initialEstimatedUnitPrice = 初期費　見積り単価
 initialAmt = 初期費　数量
 initialEstimatedPrice = 初期費　見積り金額
 hanshCd = 販社CD
+pageIdList = ページIDリスト
+dataMapList 帳票データ部マッピングリスト
+outputFileName = 出力ファイルパス
+reportSpecificResult = 帳票テンプレート特定結果
