帳票関連エラーメッセージ修正

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -306,10 +306,10 @@ TemplateDoesNotExist.TYPE = Error
 TemplateDoesNotExist.MSG = 帳票テンプレートファイル{0}が存在しません。
 PageMissMatchTemplate.ID = RRP00005
 PageMissMatchTemplate.TYPE = Error
-PageMissMatchTemplate = 帳票テンプレートと出力対象のページが一致しません。
+PageMissMatchTemplate.MSG = 帳票テンプレートと出力対象のページが一致しません。
 DataMissMatchOutputPageNum.ID = RRP00006
 DataMissMatchOutputPageNum.TYPE = Error
-DataMissMatchOutputPageNum = 出力対象ページと帳票データ部マッピングリストの数が一致しません。
+DataMissMatchOutputPageNum.MSG = 出力対象ページと帳票データ部マッピングリストの数が一致しません。
 
 
 #情報ID(バッチ)
