--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -381,7 +381,7 @@ lifecycleStatus = ライフサイクル状態
 workflowStatus = ワークフロー状態
 immutableContIdentNumber = 恒久契約識別番号
 caseTitle = 案件名
-estimationNumber = 見積番号
+estimationNumber = 見積番\uFFFD\uFFFD\uFFFD
 estimationBranchNumber = 見積番号枝番
 estimationTitle = 見積件名
 estimationType = 見積種別
@@ -583,7 +583,7 @@ itemContractName = 品種名
 contractDetail = 契約明細
 productContractName = 商品名
 serviceCategory = サービスカテゴリ
-processCategory = 処理カテゴリー
+processCategory = 処理カテゴ\uFFFD\uFFFD\uFFFDー
 targetDocKey = 対象文書キー
 workflowType = ワークフロー種別
 approvalTargetType = 承認対象種別
@@ -894,3 +894,4 @@ errorMessage = エラー内容
 errorOccurredAt = エラー発生日時
 beforeQuantity = 変更前数量
 managedEstimationDetailList = 見積明細管理
+dealerNameKana = 販売店名（カナ）
