注文DTO作成　yml修正

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -381,7 +381,7 @@ lifecycleStatus = ライフサイクル状態
 workflowStatus = ワークフロー状態
 immutableContIdentNumber = 恒久契約識別番号
 caseTitle = 案件名
-estimationNumber = 見積番\uFFFD\uFFFD\uFFFD
+estimationNumber = 見積番号
 estimationBranchNumber = 見積番号枝番
 estimationTitle = 見積件名
 estimationType = 見積種別
@@ -583,7 +583,7 @@ itemContractName = 品種名
 contractDetail = 契約明細
 productContractName = 商品名
 serviceCategory = サービスカテゴリ
-processCategory = 処理カテゴ\uFFFD\uFFFD\uFFFDー
+processCategory = 処理カテゴリー
 targetDocKey = 対象文書キー
 workflowType = ワークフロー種別
 approvalTargetType = 承認対象種別
@@ -895,3 +895,87 @@ errorOccurredAt = エラー発生日時
 beforeQuantity = 変更前数量
 managedEstimationDetailList = 見積明細管理
 dealerNameKana = 販売店名（カナ）
+setupCompanyName = セットアップ先情報会社名
+setupNameKanji = セットアップ先情報漢字（姓＋名）
+setupNameKana = セットアップ先情報　カナ（姓＋名）
+setupMailAddress = セットアップ先情報メールアドレス
+setupPostNumber = セットアップ先情報郵便番号
+setupOfficeName = セットアップ先情報事業所名
+setupAddress = セットアップ先情報住所
+setupPhoneNumber = セットアップ先情報電話番号
+item1 = 固有項目1
+item2 = 固有項目2
+item3 = 固有項目3
+item4 = 固有項目4
+item5 = 固有項目5
+item6 = 固有項目6
+item7 = 固有項目7
+item8 = 固有項目8
+item9 = 固有項目9
+item10 = 固有項目10
+item11 = 固有項目11
+item12 = 固有項目12
+item13 = 固有項目13
+item14 = 固有項目14
+item15 = 固有項目15
+item16 = 固有項目16
+item17 = 固有項目17
+item18 = 固有項目18
+item19 = 固有項目19
+item20 = 固有項目20
+item21 = 固有項目21
+item22 = 固有項目22
+item23 = 固有項目23
+item24 = 固有項目24
+item25 = 固有項目25
+item26 = 固有項目26
+item27 = 固有項目27
+item28 = 固有項目28
+item29 = 固有項目29
+item30 = 固有項目30
+productCd = 商品コード
+chargeRule = 課金制約ルール
+freePeriod = 無料期間
+productName = 商品名
+provideMethod = 提供方法
+productGroupCd = 商品グループコード
+productGroupName = 商品グループ名
+ordererCompanyName = 注文者情報会社名
+ordererNameKanji = 注文者情報漢字（姓＋名）
+ordererNameKana = 注文者情報　カナ（姓＋名）
+ordererMailAddress = 注文者情報メールアドレス
+ordererPostNumber = 注文者情報郵便番号
+ordererOfficeName = 注文者情報事業所名
+ordererAddress = 注文者情報住所
+ordererPhoneNumber = 注文者情報電話番号
+distributorName = 販売店名
+distributorCustomerType = 販売店区分
+distributorEmployeeName = 販売店担当営業
+distributorEmployeeMailAddress = 販売店担当営業メールアドレス
+distributorPostNumber = 販売店郵便番号
+distributorAddress = 販売店住所
+companyid = 企業ＩＤ
+kjbid = 企事部ＩＤ
+customerCd = 得意先コード
+contractorCompanyName = 会社名
+contractorNameKanji = 担当者漢字（姓＋名）
+contractorNameKana = 担当者カナ（姓＋名）
+contractorMailAddress = 担当者メールアドレス
+contractorPostNumber = 郵便番号
+contractorOfficeName = 事業所名
+contractorAddress = 住所
+contractorPhoneNumber = 電話番号
+authorityForNetricoh = 利用登録権限(NetRICOH)
+branchCustomerCd = 支社コード
+branchCustomerName = 支社名
+officeCd = 課所コード
+officeName = 課所名
+employeeCd = 営業コード
+employeeName = 営業名
+employeePhoneNumber = 担当営業電話番号
+employeeMailAddress = 担当営業メールアドレス
+ordererNumber = 注文番号
+ordererType = 注文タイプ
+productType = 商品種別
+makerManageNumber = メーカー契約番号
+commercialFlowDiv = 商流区分（代直区分）
