#3215 Entityチェックメソッド追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -965,3 +965,12 @@ pageIdList = ページIDリスト
 dataMapList 帳票データ部マッピングリスト
 outputFileName = 出力ファイルパス
 reportSpecificResult = 帳票テンプレート特定結果
+itemDetailContractList = 品種明細(契約用)
+contractPicMntCeEmp = 契約保守担当CE社員
+contractPicMntSsOrg = 契約保守担当SS組織
+contractPicAccSsOrg = 契約受付担当SS組織
+contractPicIntSsOrg = 契約導入担当SS組織
+contractPicAccCeEmp = 契約受付担当CE社員
+contractPicIntCeEmp = 契約導入担当CE社員
+contarctEquipmentList = 契約機種
+contractInstallationLocation = 設置先(契約用)
