帳票作成パラメーターの型変更

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -309,7 +309,7 @@ PageMissMatchTemplate.TYPE = Error
 PageMissMatchTemplate.MSG = 帳票テンプレートと出力対象のページが一致しません。
 DataMissMatchOutputPageNum.ID = RRP00006
 DataMissMatchOutputPageNum.TYPE = Error
-DataMissMatchOutputPageNum.MSG = 出力対象ページと帳票データ部マッピングリストの数が一致しません。
+DataMissMatchOutputPageNum.MSG = 出力対象ページと帳票データ部マッピングリストの数が不正です。
 
 
 #情報ID(バッチ)
