出力ファイルパス→ファイル名

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -963,7 +963,7 @@ initialEstimatedPrice = 初期費　見積り金額
 hanshCd = 販社CD
 pageIdList = ページIDリスト
 dataMapList 帳票データ部マッピングリスト
-outputFileName = 出力ファイルパス
+outputFileName = 出力ファイル名
 reportSpecificResult = 帳票テンプレート特定結果
 itemDetailContractList = 品種明細(契約用)
 contractPicMntCeEmp = 契約保守担当CE社員
