エラーメッセージプロパティ追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -381,7 +381,7 @@ lifecycleStatus = ライフサイクル状態
 workflowStatus = ワークフロー状態
 immutableContIdentNumber = 恒久契約識別番号
 caseTitle = 案件名
-estimationNumber = 見積番号
+estimationNumber = 見積番\uFFFD\uFFFD\uFFFD
 estimationBranchNumber = 見積番号枝番
 estimationTitle = 見積件名
 estimationType = 見積種別
@@ -482,7 +482,7 @@ itemMasterId = 品種マスタID
 productMasterId = 商品マスタ
 itemEstimationName = 品種名
 itemEstimation = 品種（見積用）
-ricohItemCode = リコー品種コード
+ricohItemCode = リ\uFFFD\uFFFD\uFFFDー品種コード
 itemType = 品種区分
 costType = 費用種別
 partitionPrice = 仕切価格
@@ -583,7 +583,7 @@ itemContractName = 品種名
 contractDetail = 契約明細
 productContractName = 商品名
 serviceCategory = サービスカテゴリ
-processCategory = 処理カテゴリー
+processCategory = 処理カテゴ\uFFFD\uFFFD\uFFFDー
 targetDocKey = 対象文書キー
 workflowType = ワークフロー種別
 approvalTargetType = 承認対象種別
@@ -979,3 +979,7 @@ ordererType = 注文タイプ
 productType = 商品種別
 makerManageNumber = メーカー契約番号
 commercialFlowDiv = 商流区分（代直区分）
+initialTotalAmount = 初期費合計
+monthlyTotalAmount = 月額費合計
+yearlyTotalAmount = 年額費合計
+differenceQuantity = 差分
