--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -381,7 +381,7 @@ lifecycleStatus = ライフサイクル状態
 workflowStatus = ワークフロー状態
 immutableContIdentNumber = 恒久契約識別番号
 caseTitle = 案件名
-estimationNumber = 見積番\uFFFD\uFFFD\uFFFD
+estimationNumber = 見積番号
 estimationBranchNumber = 見積番号枝番
 estimationTitle = 見積件名
 estimationType = 見積種別
@@ -482,7 +482,7 @@ itemMasterId = 品種マスタID
 productMasterId = 商品マスタ
 itemEstimationName = 品種名
 itemEstimation = 品種（見積用）
-ricohItemCode = リ\uFFFD\uFFFD\uFFFDー品種コード
+ricohItemCode = リコー品種コード
 itemType = 品種区分
 costType = 費用種別
 partitionPrice = 仕切価格
@@ -583,7 +583,7 @@ itemContractName = 品種名
 contractDetail = 契約明細
 productContractName = 商品名
 serviceCategory = サービスカテゴリ
-processCategory = 処理カテゴ\uFFFD\uFFFD\uFFFDー
+processCategory = 処理カテゴリー
 targetDocKey = 対象文書キー
 workflowType = ワークフロー種別
 approvalTargetType = 承認対象種別
