Reports改良に伴うエンティティ、DTO、メッセージ追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -285,6 +285,26 @@ EntityDoesNotExistCommunication.ID = RCM00001
 EntityDoesNotExistCommunication.TYPE = Error
 EntityDoesNotExistCommunication.MSG = 指定した{0}が存在しません。
 
+#エラーID(帳票)
+EntityDoesNotExistReports.ID = RRP00001
+EntityDoesNotExistReports.TYPE = Error
+EntityDoesNotExistReports.MSG = 指定した{0}が存在しません。
+TemplateDoesNotIdentify.ID = RRP00002
+TemplateDoesNotIdentify.TYPE = Error
+TemplateDoesNotIdentify.MSG = 帳票テンプレートが一意に特定できません。
+Vo3ISReportServiceError.ID = RRP00003
+Vo3ISReportServiceError.TYPE = Error
+Vo3ISReportServiceError.MSG = 帳票基盤でエラーが発生しました。{0}
+TemplateDoesNotExist.ID = RRP00004
+TemplateDoesNotExist.TYPE = Error
+TemplateDoesNotExist.MSG = 帳票テンプレートファイルが存在しません。
+PageMissMatchTemplate.ID = RRP00005
+PageMissMatchTemplate.TYPE = Error
+PageMissMatchTemplate.MSG = 帳票テンプレートと出力対象のページが一致しません。
+DataMissMatchOutputPageNum.ID = RRP00006
+DataMissMatchOutputPageNum.TYPE = Error
+DataMissMatchOutputPageNum.MSG = 出力対象ページと帳票データ部マッピングリストの数が不正です。
+
 #情報ID(バッチ)
 BatchCreateFileStartInfo.ID = IBA00001
 BatchCreateFileStartInfo.TYPE = Info
@@ -897,3 +917,8 @@ errorMessage = エラー内容
 errorOccurredAt = エラー発生日時
 beforeQuantity = 変更前数量
 managedEstimationDetailList = 見積明細管理
+hanshCd = 販社CD
+pageIdList = ページIDリスト
+dataMapList = 帳票データ部マッピングリスト
+outputFileName = 出力ファイル名
+reportSpecificResult = 帳票テンプレート特定結果
