その他修正

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -972,5 +972,5 @@ contractPicAccSsOrg = 契約受付担当SS組織
 contractPicIntSsOrg = 契約導入担当SS組織
 contractPicAccCeEmp = 契約受付担当CE社員
 contractPicIntCeEmp = 契約導入担当CE社員
-contarctEquipmentList = 契約機種
+contractEquipmentList = 契約機種
 contractInstallationLocation = 設置先(契約用)
