--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -368,11 +368,11 @@ SortColumn = ソート項目
 ContractDate = 契約日
 CancelScheduledDate = 解約予定日
 RequestFrom = 伝達者MoM社員ID
-RequestTo = 被伝達者MoM社員ID
+RequestTo = \uFFFD\uFFFD\uFFFD伝達者MoM社員ID
 targetDocNumber = 対象文書番号
 TargetDocKey = 対象文書キー
 TargetDocUrl = 対象文書画面URL
-CommunicationCategory = コミュニケ\uFFFD\uFFFD\uFFFDションカテゴリー
+CommunicationCategory = コミュニケーションカテゴリー
 ProcessCategory = 処理カテゴリー
 CommunicationStatus = ステータス
 
@@ -470,12 +470,12 @@ specialPriceApprovalFlg = 特価承認対象フラグ
 estimationApprovalResultList = 見積承認実績
 estimationApprovalRouteNodeList = 見積承認ルートノード
 approvalOrder = 承認順
-approverOrgLevel = 承認者組織階層レベル
+approverOrgLevel = 承認者組織階層レ\uFFFD\uFFFD\uFFFDル
 approverEmpId = 承認者MoM社員ID
 approverName = 承認者氏名
 approverOrgName = 承認者組織名
 subApproverEmpId = 代理承認者MoM社員ID
-subApproverName = 代理承\uFFFD\uFFFD\uFFFD者氏名
+subApproverName = 代理承認者氏名
 subApproverOrgName = 代理承認者組織名
 fileName = ファイル名
 fileKind = ファイル種類
@@ -577,7 +577,7 @@ contractCheckResultList = 契約チェック結果
 contractApprovalRouteList = 契約承認ルート
 contractAttachedFileList = 契約添付ファイル
 contractPicSaEmp = 契約担当SA社員
-contractAddedEditorEmpList = 契約追加編集者社員
+contractAddedEditorEmpList = 契約追加\uFFFD\uFFFD集者社員
 dealerContractList = 販売店(契約用)
 customerContract = 顧客(契約用)
 contractOperationLogList = 契約操作履歴
@@ -780,7 +780,7 @@ ffmRBillingPeriodEnd = 請求期間（終了）
 ffmBillingYm = 請求月
 ffmThisBillingCnt = 今回の請求回数
 ffmCounter = カウンター
-ffmOutputComment1 = コ\uFFFD\uFFFDント１
+ffmOutputComment1 = コメント１
 ffmOutputComment2 = コメント２
 ffmForcedFlg = 強制フラグ
 ffmInstalltionName = 機器設置先名
@@ -983,7 +983,7 @@ customerCd = 得意先コード
 contractorCompanyName = 会社名
 contractorNameKanji = 担当者漢字（姓＋名）
 contractorNameKana = 担当者カナ（姓＋名）
-contractorMailAddress = 担当者メールアドレス
+contractorMailAddress = 担当\uFFFD\uFFFDメールアドレス
 contractorPostNumber = 郵便番号
 contractorOfficeName = 事業所名
 contractorAddress = 住所
