手配結果登録API用リクエストDTO作成

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -1008,3 +1008,21 @@ pageIdList = ページIDリスト
 dataMapList = 帳票データ部マッピングリスト
 outputFileName = 出力ファイル名
 reportSpecificResult = 帳票テンプレート特定結果
+
+#手配結果登録パラメータ
+id = ID
+arrangementResultInfo = 手配結果情報
+resultCode = 手配結果コード
+errorInfo = エラー情報
+targetApi = 対象API（エラー発生箇所システム）
+message = エラー内容
+contractInfo = 契約情報
+ratePlanChargeInfo = レートプランチャージ情報
+productId = プロダクトID
+productRatePlanId = 料金プランID
+productRatePlanChargeId = 料金プランチャージID
+ratePlanChargeId = レートプランチャージID
+tenantId = テナントID
+zuoraAccountId = ZuoraアカウントId
+userId = ユーザID
+subscriptionNumber = サブスクリプション番号
