契約情報スペル修正

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -1031,7 +1031,7 @@ resultCode = 手配結果コード
 errorInfo = エラー情報
 targetApi = 対象API（エラー発生箇所システム）
 message = エラー内容
-contractInfo = 契約情報
+contructInfo = 契約情報
 ratePlanChargeInfo = レートプランチャージ情報
 productId = プロダクトID
 productRatePlanId = 料金プランID
