契約用エラーメッセージRCO00019追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -247,6 +247,9 @@ ContractLifecycleAndWorkflowStatusError.MSG = 契約のライフサイクルが{
 ContractDateParameterFormatError.ID = RCO00018
 ContractDateParameterFormatError.TYPE = Error
 ContractDateParameterFormatError.MSG = {0}のフォーマットは{1}です。
+IntegrationError.ID = RCO00019
+IntegrationError.TYPE = Error
+IntegrationError.MSG = 得意先コードと届先コードが不整合です。
 
 #エラーID(手配)
 EntityDoesNotExistArrangement.ID = RAR00001
