メッセージプロパティ・テストデータ修正

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -765,7 +765,7 @@ ffmRjPurchaseTaxRate = RJ仕入消費税率区分
 ffmRjPurchaseTaxPrice = RJ仕入消費税額
 ffmShopSalesCnt = 販売店売上数量
 ffmShopSalesPrice = 販売店売上単価
-ffmShopSalesPriceInTax = 販売店売上単価（税込）
+ffmShopSalesPriceInTax = 販売店売上単価\uFFFD\uFFFD\uFFFD税込）
 ffmShopSalesAmt = 販売店売上金額
 ffmShopSalesAmtInTax = 販売店売上金額（税込）
 ffmShopSalesTaxType = 販売店売上消費税区分
@@ -998,8 +998,8 @@ distributorEmployeeName = 販売店担当営業
 distributorEmployeeMailAddress = 販売店担当営業メールアドレス
 distributorPostNumber = 販売店郵便番号
 distributorAddress = 販売店住所
-companyid = 企業ＩＤ
-kjbid = 企事部ＩＤ
+companyId = 企業ＩＤ
+kjbId = 企事部ＩＤ
 customerCd = 得意先コード
 contractorCompanyName = 会社名
 contractorNameKanji = 担当者漢字（姓＋名）
